# MenSans

./: conftest.py  pyproject.toml  setup.py
MenSans/signal_processing/: preprocessing.py
MenSans/visualization/: Montage.py  raw_plots.py
features_computation/: frequency.py  test_features.py  time.py
pipeline/: Pipeline.py  pipeline.py
signal_preocessing/: README.md
signal_processing/: preprocessing.py
visualization/: Montage.py  frequency_plots.py  globals.py  montage.py  plot_globals.py  raw_plots.py
