[tool.poetry]
name = "mensans"
version = "0.1.0"
description = "EEG Analysis API"
authors = ["emmanuel-olateju <olatejuemmanuel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
mne = "1.6.0"
matplotlib = "^3.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
